# trik-coilgun

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: main.cpp
